# spectralint

./: .gitignore  .spectralintrc.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  action.yml  dist-workspace.toml
.github/workflows/: release.yml
benchmarks/: README.md  repos.txt  run.sh  summarise.py
editors/vscode/: package-lock.json  package.json
editors/vscode/src/: extension.ts
src/: lib.rs  main.rs  types.rs
src/checkers/: absolute_path.rs  agent_guidelines.rs  ambiguous_scope_reference.rs  bare_url.rs  boilerplate_template.rs  broken_anchor_link.rs  broken_table.rs  circular_reference.rs  click_here_link.rs  command_validation.rs  command_without_codeblock.rs  conflicting_directives.rs  context_window_waste.rs  copied_meta_instructions.rs  credential_exposure.rs  cross_file_contradiction.rs  custom_pattern.rs  dangerous_command.rs  dead_reference.rs  double_negation.rs  duplicate_instruction_file.rs  duplicate_section.rs  emoji_density.rs  emphasis_overuse.rs  empty_code_block.rs  empty_heading.rs  enum_drift.rs  excessive_nesting.rs  file_size.rs  generated_attribution.rs  generic_instruction.rs  hardcoded_file_structure.rs  hardcoded_windows_path.rs  heading_hierarchy.rs  imperative_heading.rs  inconsistent_command_prefix.rs  instruction_density.rs  instruction_without_context.rs  large_code_block.rs  long_paragraph.rs  (+32 more)
src/cli/: explain.rs  mod.rs
src/config/: mod.rs
src/engine/: cache.rs  cross_ref.rs  fix.rs  mod.rs  scanner.rs  suppress.rs
src/lsp/: mod.rs
src/parser/: mod.rs  types.rs
tests/: cli_tests.rs
(+25 files in other folders)
