[package]
name = "spectralint"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Static analysis for AI agent instruction files"
license = "MIT"
authors = ["Lukas Novak <lukas@byallmeans.co>"]
repository = "https://github.com/by-all-means/spectralint"
homepage = "https://github.com/by-all-means/spectralint"
keywords = ["lint", "markdown", "ai", "agents", "static-analysis"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = ["benchmarks/", ".github/", ".claude/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
comrak = { version = "0.34", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
strsim = "0.11"
owo-colors = "4"
anyhow = "1"
rayon = "1"
globset = "0.4"

[dev-dependencies]
tempfile = "3.25.0"
assert_cmd = "2"
predicates = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
